# AkarPass

./: .env.example  .gitignore  .npmrc  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: globals.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/.cargo/: config.toml
apps/desktop/src-tauri/capabilities/: main.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/autofill/: browser.rs  hotkey.rs  inject.rs  mod.rs
apps/desktop/src-tauri/src/autofill/browser/: browser_linux.rs  browser_macos.rs  browser_windows.rs
apps/desktop/src/components/: AppShell.tsx  AutofillBanner.tsx  EntryDetail.tsx  EntryEditor.tsx  EntryList.tsx  ExtensionBanner.tsx  LoginScreen.tsx  PasswordGenerator.tsx  PickerApp.tsx  SettingsPanel.tsx  Sidebar.tsx  TitleBar.tsx  UnlockScreen.tsx  VaultScreen.tsx
apps/desktop/src/lib/: autofill-bridge.ts  supabase.ts  vault-service.ts
apps/desktop/src/lib/i18n/: bg.ts  bs.ts  cs.ts  da.ts  de.ts  el.ts  en.ts  es.ts  et.ts  fi.ts  fr.ts  ga.ts  hr.ts  hu.ts  index.ts  is.ts  it.ts  lt.ts  lv.ts  mk.ts  mt.ts  nl.ts  no.ts  pl.ts  pt.ts  ro.ts  sk.ts  sl.ts  sq.ts  sr.ts  sv.ts  tr.ts  uk.ts
apps/extension/: manifest.json  package.json  tsconfig.json
apps/extension/scripts/: bundle.mjs
apps/extension/src/background/: index.ts
apps/extension/src/content/: index.ts
apps/extension/src/popup/: index.html  popup.ts
apps/extension/src/shared/: messages.ts
apps/mobile/: package.json
apps/mobile/src/: App.tsx
apps/motion/: package.json  tsconfig.json
apps/motion/src/: Intro.tsx  IntroMobile.tsx  Root.tsx
apps/web/: next.config.ts  package.json  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/login/: login.module.css  page.tsx
apps/web/src/app/unlock/: page.tsx
apps/web/src/app/vault/: page.tsx  vault.module.css
apps/web/src/components/: EntryDetail.module.css  EntryDetail.tsx  EntryEditor.module.css  EntryEditor.tsx  EntryList.module.css  EntryList.tsx  PasswordGenerator.module.css  PasswordGenerator.tsx  Sidebar.module.css  Sidebar.tsx
apps/web/src/lib/: supabase.ts  vault-service.ts
docs/: ENCRYPTION.md  SECURITY.md  SETUP.md
supabase/: config.toml  rls.sql  schema.sql  seed.sql
