[package]
name = "akarpass-desktop"
version = "0.3.0"
description = "AkarPass Desktop"
authors = ["AkarPass Team"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "akarpass_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "akarpass-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = [] }
tauri-plugin-store = "2.1.0"
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Cross-platform synthetic keystroke injection for autofill.
enigo = "0.2"
# Clipboard paste for autofill: bypasses keyboard-layout and browser
# autocomplete-dropdown races that occur when enigo types char-by-char.
# Content is written to the clipboard, pasted via Ctrl+V, then restored.
arboard = "3.4"

# Windows-only: UIAutomation for reading the focused browser's URL.
[target.'cfg(target_os = "windows")'.dependencies]
uiautomation = "0.16"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Com",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
] }

[profile.release]
# Security: strip debug symbols from release builds
strip = true
# Optimize for size (reduces attack surface via smaller binary)
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
